do client side validation false by default on people form

--- a/app/views/refinery/race_registrations/people/_form.html.erb
+++ b/app/views/refinery/race_registrations/people/_form.html.erb
@@ -1,7 +1,7 @@
 <%= render :partial=>"form_header" %>
 <%#TODO club autocomplete %>
 
-<%= form_for [refinery, :race_registrations, @person] do |f| -%>
+<%= form_for [refinery, :race_registrations, @person], :validate=>false do |f| -%>
     <%= render '/refinery/admin/error_messages',
                :object => @person,
                :include_object_name => true %><br/>
