add some country codes

--- a/app/views/refinery/race_registrations/people/_form.html.erb
+++ b/app/views/refinery/race_registrations/people/_form.html.erb
@@ -65,6 +65,13 @@
         <option value="POL">POL</option>
         <option value="POL">HUN</option>
         <option value="AUT">AUT</option>
+        <option value="SVN">SVN</option>
+        <option value="RUS">RUS</option>
+        <option value="HRV">HRV</option>
+        <option value="FRA">FRA</option>
+        <option value="BEL">BEL</option>
+        <option value="DEU">DEU</option>
+        <option value="CHE">CHE</option>
         <option value="" onclick="$('#person_country_select').replaceWith('<input type=text name=person[country] >');"><%= t('.country.different') %></option>
       </select>
     </div>
@@ -78,4 +85,5 @@
 
     <%= f.submit t('.save_registration') %>
 <% end -%>
+
 
