add some country codes

--- a/app/views/refinery/race_registrations/people/_form.html.erb
+++ b/app/views/refinery/race_registrations/people/_form.html.erb
@@ -72,6 +72,7 @@
         <option value="BEL">BEL</option>
         <option value="DEU">DEU</option>
         <option value="CHE">CHE</option>
+        <option value="ESP">ESP</option>
         <option value="" onclick="$('#person_country_select').replaceWith('<input type=text name=person[country] >');"><%= t('.country.different') %></option>
       </select>
     </div>
